# Aegaeon

./: .gitignore  .gitmodules  README.md  pyproject.toml
aegaeon/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
aegaeon/.setup/: README.md  ceph-sync.sh  gemini-initialize-ssh.sh  jump-initialize-ceph.sh  (+1 more)
aegaeon/quick_model_loader/: .gitignore  Cargo.toml  MANIFEST.in  setup.py
aegaeon/quick_model_loader/benchmark/: benchmark.py  benchmark_pipeline.py  load_model.py  load_shardings.py  model_transfer.py  share_memory.py  share_tensor.py  shared_storage.py  tensor_receive_gloo.py  tensor_receive_socket.py  tensor_send_gloo.py  tensor_send_socket.py  tensor_transfer.py
aegaeon/quick_model_loader/quick_model_loader/: __init__.py  allocator.py  handle.py  meta.py  model_loader.py  utils.py
aegaeon/quick_model_loader/rsrc/: lib.rs
aegaeon/quick_model_loader/tests/: test_allocator.py  test_loader.py  test_memory_table.py  test_meta.py
aegaeon/quick_model_loader/tests/test_models/: create_model.py  test.safetensors
aegaeon/quick_model_loader/tests/test_models/model0/: model-00001-of-00002.safetensors  model-00002-of-00002.safetensors
aegaeon/quick_model_loader/tests/test_models/model1/: model-00001-of-00002.safetensors  model-00002-of-00002.safetensors
aegaeon/quick_model_loader/tests/test_models/model2/: model-00001-of-00002.safetensors  model-00002-of-00002.safetensors
aegaeon/quick_model_loader/tests/test_models/model3/: model-00001-of-00003.safetensors  model-00002-of-00003.safetensors  model-00003-of-00003.safetensors
(+7949 files in other folders)
